--- a/Deforestation-App/vercel.json
+++ b/Deforestation-App/vercel.json
@@ -1,12 +1,18 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "*.html",
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
+    {
+      "src": "/",
+      "dest": "/index.html"
+    },
+    {
+      "src": "/about",
+      "dest": "/about.html"
+    },
+    {
+      "src": "/app",
+      "dest": "/app.html"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
