--- a/Deforestation-App/vercel.json
+++ b/Deforestation-App/vercel.json
@@ -1,21 +1,1 @@
-{
-  "version": 2,
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/about",
-      "dest": "/about.html"
-    },
-    {
-      "src": "/app",
-      "dest": "/app.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
-}
+{"rewrites":[{"source":"/(.*)","destination":"/index.html"}]}
